--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "server": "json-server --watch -p 8000 db.json"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
-    "@mui/material": "^5.16.6",
+    "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.12.0",
     "@mui/x-data-grid": "^7.12.0",
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "ReactPOC": "file:",
+    "rsuite": "^5.70.2",
     "search": "file:",
     "styled-components": "^6.1.12",
     "ts-jest": "^29.2.4",
