--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "search": "file:",
     "styled-components": "^6.1.12",
     "ts-jest": "^29.2.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "eslintConfig": {
     "extends": [
